[feat]: added images and style.css

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<!-- page head (settings) -->
-
-<head>
+<head> <!-- page head (settings) -->
+  <!-- page settings -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Receitas</title>
+
+  <!-- link to css -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
-
-<!-- page body (content) -->
-
-<body>
+<body> <!-- page body (content) -->
   <div id="page">
 
     <!-- background image -->
-    <img src="" alt="">
+    <img src="assets/main-image.jpg" alt="cupcake image">
 
     <!-- main content -->
     <main>
