[feat]: added footer

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
       </section>
     </main>
   </div>
+
+  <!-- footer -->
+  <footer>
+    <p>
+      Feito com
+      <img src="assets/heart.svg" alt="heart icon">
+      por Maurício Valente Martins
+    </p>
+  </footer>
 </body>
 
 </html>
